WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42878
Backslash isn't transcoded in <input>
https://bugs.webkit.org/show_bug.cgi?id=42878
Summary
Backslash isn't transcoded in <input>
Shinichiro Hamaji
Reported
2010-07-23 00:39:55 PDT
With
Bug 39654
, font:-webkit-* is considered a explicitly specified font. As these -webkit-* fonts are used internally, we should consider they are not specified explicitly.
Attachments
Patch v1
(170.14 KB, patch)
2010-07-23 00:46 PDT
,
Shinichiro Hamaji
tkent
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shinichiro Hamaji
Comment 1
2010-07-23 00:46:16 PDT
Created
attachment 62388
[details]
Patch v1
Kent Tamura
Comment 2
2010-07-23 00:51:21 PDT
Comment on
attachment 62388
[details]
Patch v1 Ok.
Shinichiro Hamaji
Comment 3
2010-07-23 01:38:05 PDT
Committed
r63957
: <
http://trac.webkit.org/changeset/63957
>
Shinichiro Hamaji
Comment 4
2010-07-23 13:29:53 PDT
Committed
r63995
: <
http://trac.webkit.org/changeset/63995
>
Alexey Proskuryakov
Comment 5
2010-10-01 14:06:07 PDT
This commit changes a lot of results in platform/mac/fast/text/backslash-to-yen-sign-euc-expected.png from PASS to FAIL. Why was this acceptable? For example, 'Using font "menu". expected: backslash' used to actually have a backslash, but it now has a Yen symbol. I can't easily tell if these are real failures, or new expected results - in the latter case, the test obviously needs to be updated.
Kent Tamura
Comment 6
2010-10-08 01:08:07 PDT
(In reply to
comment #5
)
> This commit changes a lot of results in platform/mac/fast/text/backslash-to-yen-sign-euc-expected.png from PASS to FAIL. Why was this acceptable? > > For example, 'Using font "menu". expected: backslash' used to actually have a backslash, but it now has a Yen symbol. > > I can't easily tell if these are real failures, or new expected results - in the latter case, the test obviously needs to be updated.
Agree. The rendering result looks wrong. Hamaji-san?
Alexey Proskuryakov
Comment 7
2010-10-08 08:51:16 PDT
Adam filed
bug 47017
and
bug 47018
to track these problems on Mac and Windows.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug