2010-07-23  Shinichiro Hamaji  <hamaji@chromium.org>

Reviewed by Kent Tamura.

        Backslash isn't transcoded in <input>
        https://bugs.webkit.org/show_bug.cgi?id=42878

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty):
2010-07-23  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Kent Tamura.

        Backslash isn't transcoded in <input>
        https://bugs.webkit.org/show_bug.cgi?id=42878

        * editing/selection/find-yensign-and-backslash-expected.txt:
        * platform/mac/fast/text/backslash-to-yen-sign-euc-expected.checksum:
        * platform/mac/fast/text/backslash-to-yen-sign-euc-expected.png:
        * platform/mac/fast/text/backslash-to-yen-sign-euc-expected.txt:


Canonical link: https://commits.webkit.org/54790@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63957 268f45cc-cd09-0410-ab3c-d52691b4dbfc